# ohlcv-ai

./: README.md  README_zh-CN.md
crates/: Cargo.toml  README.md  README_zh-CN.md
crates/src/: lib.rs  types.rs
crates/src/aliyun/: client.rs  mod.rs  model.rs  types.rs
crates/src/deepseek/: client.rs  mod.rs  model.rs  types.rs
ts/: README.md  package.json
ts/src/: index.ts  types.ts
ts/src/aliyun/: index.ts  model.ts
ts/src/deepseek/: index.ts  model.ts
ts/src/openai/: index.ts  model.ts
