[package]
name = "ohlcv-ai"
version = "0.1.0"
edition = "2024"
description = "AI agents focused on processing ohlcv data structures."
authors = ["happyboy <superhappyboy1995@gmail.com>"]
license = "Apache2.0"
repository = "https://github.com/0xhappyboy/ohlcv-ai/tree/main/crates"
readme = "README.md"
keywords = ["aliyun", "ai", "ai agent", "llm", "deepseek"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"
regex = "1.0"
